--- a/codetrick/code.css
+++ b/codetrick/code.css
@@ -87,7 +87,7 @@ div#shadow {
 .transision {
     width: 100px;
     height: 100px;
-    background-color: red;
+    background-color: green;
     transition: width 4s;
 }
 
