--- a/codetrick/code.css
+++ b/codetrick/code.css
@@ -52,6 +52,7 @@ h1#header {
 body {
     /* font-family:monospace; */
     font-family: 'IBM Plex Mono', monospace;
+    font-style: italic;
 }
 
 .gradiant {
